bad/assign_arr_elem_string_int.example_compiler_output
ERROR
[1mbad/assign_arr_elem_string_int.lat:4:21: [1;31merror: [0;1massigning to `string` from incompatible type `int`[m
	(new string[3])[1] = 42;
	                   [1;32m^[m
